# Clip2Gif

./: .gitignore  AGENTS.md  EXECPLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  exportValidation.test.ts  exportValidation.ts  ffmpegGif.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
