[package]
name = "clip2gif"
version = "0.1.0"
description = "Create GIF files from short video clips."
authors = ["Clip2Gif"]
edition = "2021"

[lib]
name = "clip2gif_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
